# fuer-elite

./: CMakeLists.txt  README.md  common.h  fe.c  sequence.h  sfx.frag  sfx.h
font/: font.h  font.py  strings.txt
gfx/: fogforest.frag  load.frag  load.h  symbols.h  text.frag  text.h  z10in.frag  z10out.frag
sketch/: onsite.txt
